--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <section id="menu" class="menu">
-        <h1>CAR CHASE</h1>
+        <h1>RAPID RACER</h1>
         <div class="options d-flex flex-column">
             <button onclick="startGame()" class="button">NEW GAME</button>
             <button onclick="showTutorial()" class="button">TUTORIAL</button>
@@ -18,11 +18,11 @@
     </section>
 
     <section id="gameWindow" class="game-window">
-        <div id="player" class="player"></div>
+        <img src="sources\graphics\car (1).png" class="player" id="player">
     </section>
 
     <section id="tutorial" class="tutorial">
-        <h1>ovlada sa W,S,A,D tupec</h1>
+        <h1>ovlada sa W,S,A,D tupac shakur west side</h1>
     </section>
     
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
