pridany favicon + test s road image (background) 2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="sources/graphics/favicon1.png">
     <title>RAPID RACER</title>
 </head>
 <body>
@@ -20,6 +21,7 @@
     </section>
 
     <main id="gameWindow" class="game-window">
+        <img src="sources/graphics/road1.png" alt="Background Image" id="backgroundImage">
         <div class="player" id="player"></div>
     </main>
 
