added collision detection for road + added Road class

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </section>
 
     <main id="gameWindow" class="game-window">
-        <img src="sources/graphics/road1.png" alt="Background Image" id="backgroundImage">
+        <img src="sources/graphics/road1.png" alt="road" id="road" class="road">
         <div class="player" id="player"></div>
     </main>
 
@@ -36,5 +36,6 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="scripts/script.js"></script>
     <script src="scripts/Player.js"></script>
+    <script src="scripts/Road.js"></script>
 </body>
 </html>
