fixed player model

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <canvas id="canvas" class="canvas">
             <img src="sources/graphics/road2.png" alt="road" id="road" class="road">
         </canvas>
-        <div class="player" id="player"></div>
+        <img src="sources/graphics/car (1).png" alt="player" class="player" id="player">
     </main>
 
     <div id="tutorial" class="tutorial">
