added falling car

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <img src="sources/graphics/road2.png" alt="road" id="road" class="road">
         </canvas>
         <img src="sources/graphics/car (1).png" alt="player" class="player" id="player">
+        <img src="sources/graphics/car (2).png" alt="car" class="car" id="car">
     </main>
 
     <div id="tutorial" class="tutorial">
@@ -40,6 +41,7 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="scripts/Player.js"></script>
     <script src="scripts/Road.js"></script>
+    <script src="scripts/Car.js"></script>
     <script src="scripts/script.js"></script>
 </body>
 </html>
