remove cars out of screen + added timer + car counter

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     </div>
 
     <main id="gameWindow" class="game-window">
+        <div class="stats">
+            <h2 id="timeLeft">TIME:</h2>
+            <h2 id="carsLeft">CARS LEFT:</h2>
+        </div>
         <canvas id="canvas" class="canvas">
             <img src="sources/graphics/road2.png" alt="road" id="road" class="road">
         </canvas>
