cars movement velocity + goofy ahh sounds

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     </div>
 
     <main id="gameWindow" class="game-window">
+        <audio id="audioAccelerate" src="sources/sounds/Car Acceleration Sound.mp3"></audio>
+        <audio id="audioDecelerate" src="sources/sounds/deceleration.mp3"></audio>
+        <audio id="audioBreaking" src="sources/sounds/breaking.mp3"></audio>
         <dialog id="loseDialog">
             <p> Game over chlapce </p>
             <button onclick="showMenu()" class="button">MENU</button>
