--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </div>
 
     <main id="gameWindow" class="game-window">
-        <dialog id="loseDialog">
-            <p> Game over chlapce </p>
+        <dialog id="loseDialog" class="dialog text-center">
+            <h2>GAME OVER</h2>
             <button onclick="showMenu()" class="button">MENU</button>
         </dialog>
-        <dialog id="winDialog">
-            <p> Vyhral si </p>
+        <dialog id="winDialog" class="dialog text-center">
+            <h2>WIN</h2>
             <button onclick="showMenu()" class="button">MENU</button>
         </dialog>
         <div class="stats">
@@ -41,9 +41,17 @@
     <div id="tutorial" class="tutorial">
         <div class="d-flex justify-content-center align-items-center flex-column">
             <div class="controls d-flex justify-content-center align-items-center flex-column">
+                <h2>POPIS HRY</h2>
+                <p class="text-center">Cieľom hry je predbehnúť všetky autá za stanovený čas a to bez nabúrania.</p><br>
+                <h2>OVLÁDANIE NA PC</h2>
                 <ul>
-                    <li>ovlada sa W,S,A,D</li>
-                    <li>naklanaj na mobile</li>
+                    <li>A,D - zabáčanie do strán</li>
+                    <li>W - zrýchľovanie (šetrí čas)</li>
+                    <li>S - spomaľovanie (uberá čas)</li>
+                </ul><br>
+                <h2>OVLÁDANIE NA MOBILE</h2>
+                <ul>
+                    <li>nakláňanie do strán</li>
                 </ul>
             </div>
             <button onclick="showMenu()" class="button">MENU</button>
