fixed responsivity for galaxy fold

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
     <div id="tutorial" class="tutorial">
         <div class="d-flex justify-content-center align-items-center flex-column">
             <div class="controls d-flex justify-content-center align-items-center flex-column">
-                <h2>POPIS HRY</h2>
+                <h2 class="text-center">POPIS HRY</h2>
                 <p class="text-center">Cieľom hry je predbehnúť všetky autá za stanovený čas a to bez nabúrania.</p><br>
-                <h2>OVLÁDANIE NA PC</h2>
+                <h2 class="text-center">OVLÁDANIE NA PC</h2>
                 <ul>
-                    <li>A,D - zabáčanie do strán</li>
-                    <li>W - zrýchľovanie (šetrí čas)</li>
-                    <li>S - spomaľovanie (uberá čas)</li>
+                    <li>A,D - zabáčanie</li>
+                    <li>W - zrýchľovanie</li>
+                    <li>S - spomaľovanie</li>
                 </ul><br>
-                <h2>OVLÁDANIE NA MOBILE</h2>
+                <h2 class="text-center">OVLÁDANIE NA MOBILE</h2>
                 <ul>
                     <li>nakláňanie do strán</li>
                 </ul>
