optimalizacia pre tlac + valid html

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <canvas id="canvas" class="canvas">
             <img src="sources/graphics/road2.png" alt="road" id="road" class="road">
         </canvas>
-        <img src="sources/graphics/car (1).png" alt="player" class="player" id="player">
+        <img src="sources/graphics/car.png" alt="player" class="player" id="player">
         
     </main>
 
     <div id="tutorial" class="tutorial">
         <div class="d-flex justify-content-center align-items-center flex-column">
-            <div class="controls d-flex justify-content-center align-items-center flex-column">
+            <div class="controls d-flex justify-content-center align-items-center flex-column" id="controls">
                 <h2 class="text-center">POPIS HRY</h2>
                 <p class="text-center">Cieľom hry je predbehnúť všetky autá za stanovený čas a to bez nabúrania.</p><br>
                 <h2 class="text-center">OVLÁDANIE NA PC</h2>
