--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 </head>
 <body>
     <img src="sources/graphics/menu.png" alt="menu" id="menuBackground" class="menu-background">
+    <audio id="hoverSound" src="sources/sounds/button-hover.mp3"></audio>
+    <audio id="clickSound" src="sources/sounds/button-click.mp3"></audio>
+    <audio id="menuTheme" src="sources/sounds/menu-theme.mp3"></audio>
 
     <div id="menu" class="menu">
         <div class="options d-flex flex-column">
             <button onclick="startGame()" class="button">NOVÁ HRA</button>
             <button onclick="showTutorial()" class="button">TUTORIÁL</button>
+            <button onclick="showSettings()" class="button">NASTAVENIA</button>
         </div>
     </div>
 
@@ -53,6 +57,17 @@
                 <ul>
                     <li>nakláňanie do strán</li>
                 </ul>
+            </div>
+            <button onclick="showMenu()" class="button">MENU</button>
+        </div>
+    </div>
+
+    <div id="settings" class="settings">
+        <div class="d-flex justify-content-center align-items-center flex-column">
+            <div class="controls">
+                <h2 class="text-center">NASTAVENIA</h2>
+                <label for="musicRange" class="form-label">HLASITOSŤ HUDBY</label>
+                <input type="range" class="form-range" min="0" max="1" step="0.1" id="musicRange" value="0.1">
             </div>
             <button onclick="showMenu()" class="button">MENU</button>
         </div>
