fix + added sounds - win, crash

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <audio id="audioDecelerate" src="sources/sounds/deceleration.mp3"></audio>
         <audio id="audioBreaking" src="sources/sounds/breaking.mp3"></audio>
         <audio id="audioBasic" src="sources/sounds/basic moving car.mp3"></audio>
+        <audio id="audioWin" src="sources/sounds/win2.mp3"></audio>
+        <audio id="audioCrash" src="sources/sounds/car crash2.mp3"></audio>
         <dialog id="loseDialog">
             <p> Game over chlapce </p>
             <button onclick="showMenu()" class="button">MENU</button>
