--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     <div id="menu" class="menu">
         <div class="options d-flex flex-column">
-            <button onclick="startGame()" class="button">NOVÁ HRA</button>
+            <button onclick="newGame()" class="button">NOVÁ HRA</button>
+            <button onclick="startGame()" class="button" id="continueButton" >POKRAČOVAŤ</button>
             <button onclick="showTutorial()" class="button">TUTORIÁL</button>
             <button onclick="showSettings()" class="button">NASTAVENIA</button>
         </div>
@@ -36,6 +37,7 @@
         </dialog>
         <dialog id="winDialog" class="dialog text-center">
             <h2>WIN</h2>
+            <label id="levelCounter">X/Y level</label>
             <button onclick="showMenu()" class="button">MENU</button>
         </dialog>
         <div class="stats">
